Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-123131

Modified video frames are not updated for rendering

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.6, 6.7.1, 6.8.0 FF
    • 6.5, 6.6, 6.7
    • Multimedia
    • None
    • All
    • 537fae96a (dev), fab367331 (6.7), 0ffae9a04 (6.6), eeaaf2921 (tqtc/lts-6.5)

    Description

      Steps:

      • get a video frame from QMediaPlayer
      • map the frame for writing
      • modify the data
      • unmap the frame
      • send the frame to QVideoWidget to be rendered

      AR: the modification is not applied for rendering
      ER: the modification is applied for rendering

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            artemiy Artem Dyomin
            artemiy Artem Dyomin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes