src/multimedia/video/qvideoframe_p.h
@@ -21,7 +21,6 @@
 #include "private/qtvideo_p.h"
 
 #include <qmutex.h>
-#include <mutex> // std::once
 
 QT_BEGIN_NAMESPACE
 
@@ -53,7 +52,7 @@ public:
     QtVideo::Rotation rotation = QtVideo::Rotation::None;
     bool mirrored = false;
     QImage image;
-    std::once_flag imageOnceFlag;
+    QMutex imageMutex;
 
 private:
     Q_DISABLE_COPY(QVideoFramePrivate)
